Enhance and rename logoff route
